# C-Star-Lang

./: CMakeLists.txt  README.md  example.csl
.github/workflows/: cmake-multi-platform.yml
docs/docs/Writerside/: hi.tree
docs/docs/Writerside/topics/: C-Star-Lang.md
src/: main.cpp
src/Compiler/: Lexer.cpp  Lexer.h  Parser.cpp  Parser.h
src/ErrorHandling/: CompilerResult.h
src/IO/: File.cpp  File.h
